--- a/components/Stories.css
+++ b/components/Stories.css
@@ -27,8 +27,221 @@
   .card:active {
     transform: scale(0.95) rotateZ(1.7deg);
   }
+  .activeCard{
+    border: 1px solid black;
+    transform: scale(1.05);
+  }
   .storiesMain{
     width: 100%;
     overflow-x: auto;
     white-space: nowrap;
   }
+  .newStoryForm{
+    width: 298px;
+  }
+
+  .form {
+    --input-focus: #2d8cf0;
+    --font-color: #323232;
+    --font-color-sub: #666;
+    --bg-color: #fff;
+    --main-color: #323232;
+    padding: 20px;
+    background: lightgrey;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    box-shadow: 4px 4px var(--main-color);
+  }
+  
+  .title {
+    color: var(--font-color);
+    font-weight: 900;
+    font-size: 20px;
+    margin-bottom: 25px;
+  }
+  
+  .title span {
+    color: var(--font-color-sub);
+    font-weight: 600;
+    font-size: 17px;
+  }
+  
+  .input1 {
+    width: 250px;
+    height: 40px;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    background-color: var(--bg-color);
+    box-shadow: 4px 4px var(--main-color);
+    font-size: 15px;
+    font-weight: 600;
+    color: var(--font-color);
+    padding: 5px 10px;
+    outline: none;
+  }
+  
+  .input::placeholder {
+    color: var(--font-color-sub);
+    opacity: 0.8;
+  }
+  
+  .input:focus {
+    border: 2px solid var(--input-focus);
+  }
+  
+  .login-with {
+    display: flex;
+    gap: 20px;
+  }
+  
+  .button-log {
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    border: 2px solid var(--main-color);
+    background-color: var(--bg-color);
+    box-shadow: 4px 4px var(--main-color);
+    color: var(--font-color);
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .icon {
+    width: 24px;
+    height: 24px;
+    fill: var(--main-color);
+  }
+  
+  .button-log:active, .button-confirm:active {
+    box-shadow: 0px 0px var(--main-color);
+    transform: translate(3px, 3px);
+  }
+  
+  .button-confirm {
+    margin: 50px auto 0 auto;
+    width: 120px;
+    height: 40px;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    background-color: var(--bg-color);
+    box-shadow: 4px 4px var(--main-color);
+    font-size: 17px;
+    font-weight: 600;
+    color: var(--font-color);
+    cursor: pointer;
+  }
+  
+  .btn-23,
+  .btn-23 *,
+  .btn-23 :after,
+  .btn-23 :before,
+  .btn-23:after,
+  .btn-23:before {
+    border: 0 solid;
+    box-sizing: border-box;
+  }
+  
+  .btn-23 {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-appearance: button;
+    background-color: #000;
+    background-image: none;
+    color: #fff;
+    cursor: pointer;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+      Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+      Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-size: 100%;
+    font-weight: 900;
+    line-height: 1.5;
+    margin: 0;
+    -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+    padding: 0;
+    text-transform: uppercase;
+  }
+  
+  .btn-23:disabled {
+    cursor: default;
+  }
+  
+  .btn-23:-moz-focusring {
+    outline: auto;
+  }
+  
+  .btn-23 svg {
+    display: block;
+    vertical-align: middle;
+  }
+  
+  .btn-23 [hidden] {
+    display: none;
+  }
+  
+  .btn-23 {
+    border-radius: 99rem;
+    border-width: 2px;
+    overflow: hidden;
+    padding: 0.8rem 3rem;
+    position: relative;
+  }
+  
+  .btn-23 span {
+    display: grid;
+    inset: 0;
+    place-items: center;
+    position: absolute;
+    transition: opacity 0.2s ease;
+  }
+  
+  .btn-23 .marquee {
+    --spacing: 5em;
+    --start: 0em;
+    --end: 5em;
+    -webkit-animation: marquee 1s linear infinite;
+    animation: marquee 1s linear infinite;
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+    opacity: 0;
+    position: relative;
+    text-shadow: #fff var(--spacing) 0, #fff calc(var(--spacing) * -1) 0,
+      #fff calc(var(--spacing) * -2) 0;
+  }
+  
+  .btn-23:hover .marquee {
+    -webkit-animation-play-state: running;
+    animation-play-state: running;
+    opacity: 1;
+  }
+  
+  .btn-23:hover .text {
+    opacity: 0;
+  }
+  
+  @-webkit-keyframes marquee {
+    0% {
+      transform: translateX(var(--start));
+    }
+  
+    to {
+      transform: translateX(var(--end));
+    }
+  }
+  
+  @keyframes marquee {
+    0% {
+      transform: translateX(var(--start));
+    }
+  
+    to {
+      transform: translateX(var(--end));
+    }
+  }
+  
