--- a/components/Stories.css
+++ b/components/Stories.css
@@ -32,15 +32,19 @@
     transform: scale(1.05);
   }
   .storiesMain{
-    width: 100%;
+    /* width: 100%; */
     overflow-x: auto;
     white-space: nowrap;
   }
   .newStoryForm{
     width: 298px;
     position: absolute;
-    top: 25%;
-    left: 40%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    background-color: lightblue;
+    text-align: center;
+   
   }
 
   .form {
@@ -130,7 +134,7 @@
   
   .button-confirm {
     margin: 50px auto 0 auto;
-    width: 120px;
+    width: 160px;
     height: 40px;
     border-radius: 5px;
     border: 2px solid var(--main-color);
